# decentnet-internal

./: .gitignore  Cargo.toml
compatibility/: Cargo.toml
compatibility/src/: main.rs
manifest/: Cargo.toml
manifest/src/: file.rs  internal.rs  io.rs  lib.rs  manifest.rs
manifest/src/zeronet/: file.rs  internal.rs  manifest.rs  mod.rs  utils.rs
manifest/tests/: btc_addr.rs  files.toml  manifest.toml  manifest2.toml  multi_sig.rs  multihash_test.rs
manifest/tests/data/zeronet/bare/: content.json
manifest/tests/data/zeronet/empty/: content.json  index.html
manifest/tests/data/zeronet/me/data/users/user1/: content.json
manifest/tests/data/zeronet/me/data/users/user2/: content.json
manifest/tests/data/zeronet/talk/data/users/user1/: content.json
network/: Cargo.toml
network/src/: lib.rs
network/src/api/: common.rs  lib.rs  mod.rs
network/src/network/: behaviour.rs  config.rs  error.rs  handler.rs  identity.rs  mod.rs  protocol.rs  record.rs
network/src/network/protocol/: custom.rs  json.rs  mod.rs
