[package]
name = "compatibility"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
publish.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
clap = { workspace = true }
zerucontent = { workspace = true, features = [] }
serde_bytes = { workspace = true }
serde_json = { workspace = true }
