[package]
name = "decentnet-manifest"
version = "0.0.1"
edition = { workspace = true }
license = "MIT OR Apache-2.0"


[dependencies]
serde = { workspace = true, features = ["derive"] }
toml = { workspace = true }
chrono = { workspace = true }

serde_with = { workspace = true }
multihash = { workspace = true, features = ["serde-codec"] }
cid = { workspace = true }

bitcoin = { workspace = true, features = ["rand"] }
rand = { workspace = true }
frost-secp256k1 = { workspace = true }
